Wed Oct 29 10:00:18 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gems/bundled_gems: Update latest version of bundled gems.

Tue Oct 28 16:52:07 2014  Eric Wong  <e@80x24.org>

	* signal.c (install_sighandler): remove rb_disable_interrupt and
	  rb_enable_interrupt calls
	  (init_sigchld): ditto
	  (Init_signal): disable and enable interrupt once around all
	  install_sighandler and init_sigchld to reduce syscalls at start
	  [Feature #9345] [ruby-core:59480]

Tue Oct 28 16:22:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options, load_file_internal2): should not
	  require other files when dump option is given.
	  [ruby-dev:48712] [Bug #10435]

Tue Oct 28 14:51:38 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: remove apple-gcc4.2 from CC candidates.

Mon Oct 27 20:13:37 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rexml/entity.rb: keep the entity size within the limitation.
	  reported by Willis Vandevanter <will@silentrobots.com> and
	  patched by nahi.

Mon Oct 27 17:17:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (method_proc): the receiver of binding from method should
	  be same as the receiver of the method.
	  [ruby-core:65917] [Bug #10432]

Mon Oct 27 16:26:37 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_super.rb: add a test to check block passing.

Mon Oct 27 15:59:26 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: is_incremental_marking(), will_be_incremental_marking():
	  use `&&' with GC_ENABLE_INCREMENTAL_MARK instead of using
	  #if/#else/#endif.

Mon Oct 27 13:40:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_sweep_rest): sweep rest pages regardless of whether
	  lazy sweep is enabled or not.  based on the patch by Masahiro
	  Ide at [ruby-dev:48706].  [Bug #10431]

Mon Oct 27 11:18:32 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_process.rb (test_deadlock_by_signal_at_forking):
	  reduce garbage during forks
