@@ -154,6 +154,7 @@ with all sufficient information, see the ChangeLog file.
       along the +num+ -th row or column.
     * Vector.basis(size:, index:) returns the specified basis vector
     * Unary - and + added for Vector and Matrix
+    * Vector#dot and #cross are aliases for #inner_product and #cross_product
 
 * Pathname
   * Pathname#/ is aliased to Pathname#+.
