@@ -1,3 +1,8 @@
+Wed Oct 29 11:42:33 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/matrix.rb: Add aliases for Vector#cross & dot
+	  patch by gogo tanaka [#10352]
+
 Wed Oct 29 10:00:18 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* gems/bundled_gems: Update latest version of bundled gems.
